--- a/projects/twitch/index.html
+++ b/projects/twitch/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Twitch JSON API</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="script.js" type="text/javascript"></script>
   </head>
   <body>
