--- a/index.html
+++ b/index.html
@@ -97,6 +97,29 @@
                     </div>
                   </div>
 
+                  <div class="col-md-4 port">
+                    <div class="thumbnail">
+                      <div class="portfolio-img-bg">
+                        <a href="https://github.com/Krashner/Projects" target="_blank"><img class="portfolio-img" src="images/thumbnail-gh.jpg" alt="GitHub link"></a>
+                      </div>
+                      <p class="caption">GitHub Mega Project</p>
+                    </div>
+                  </div>
+                  <div class="col-md-4 port">
+                    <div class="thumbnail">
+                      <div class="portfolio-img-bg">
+                        <a href="http://www.oddrealms.com/" target="_blank"><img class="portfolio-img" src="images/thumbnail-or.jpg" alt="OddRealms link"></a>
+                      </div>
+                      <p class="caption">Open world game project</p>
+                    </div>
+                  </div>
+                  <div class="col-md-4 port">
+                    <div class="thumbnail">
+                      <div class="portfolio-img-bg">
+                        <a href="http://jimbuttreyperformance.com/" target="_blank"><img class="portfolio-img" src="images/thumbnail-jb.jpg" alt="Jim Buttrey Performace link"></a>
+                      </div>
+                      <p class="caption">Performace Engines Business Site</p>
+                    </div>
                 </div>
               </div>
             </div>
