--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
-<nav class="navbar fixed-top navbar-inverse">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Portfolio">
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+    <meta name="author" content="Justin">
+    <title>My Portfolio!</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+  <body>
+ <nav class="navbar fixed-top navbar-inverse">
   <div class="container-fluid text" id="navbar-container">
     <div class="col"></div>
     <a class="nav-link" href="#about">About</a>
@@ -117,3 +130,5 @@
     </div>
   </div>
 </div>
+  </body>
+</html>  
