--- a/index.html
+++ b/index.html
@@ -1,134 +1,183 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Portfolio">
-    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
-    <meta name="author" content="Justin">
-    <title>My Portfolio!</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
-  <body>
- <nav class="navbar fixed-top navbar-inverse">
-  <div class="container-fluid text" id="navbar-container">
-    <div class="col"></div>
-    <a class="nav-link" href="#about">About</a>
-    <a class="nav-link" href="#projects">Projects</a>
-    <a class="nav-link" href="#contact">Contact</a>
-  </div>
-</nav>
 
-<div class="container-fluid" id="wrapper" data-spy="scroll" data-target=".navbar" data-offset="50">
-  <div class="row">
-    <div class="col">
-      <sections>
-        <div class="sections-dummy" id="dummy-top"></div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="description" content="Portfolio">
+  <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+  <meta name="author" content="Justin">
+  <title>My Portfolio!</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 
-        <!-- About Section -->
-        <div class="row  section-title" id="about">
-          <hr class="section-title-hr" />
-          <div class="col-md-5 col-sm-12 col-xs-12 text-center">
-            <h1 class=section-title-text>About</h1>
-          </div>
-        </div>
+<body>
+  <nav class="navbar fixed-top navbar-inverse">
+    <div class="container-fluid text" id="navbar-container">
+      <div class="col"></div>
+      <a class="nav-link" href="#about">About</a>
+      <a class="nav-link" href="#projects">Projects</a>
+      <a class="nav-link" href="#contact">Contact</a>
+    </div>
+  </nav>
 
-        <div class="section" id="about-content">
-          <div class="row">
-            <div class="col-md-9">
-              <div class="about-text">
-                <div class="row">
-                  <div class="col text-left">
-                    <h1>Justin Buttrey</h1>
-                    <p>Front end developer, part-time student and hobby game designer. I'm currently working through the FreeCodeCamp courses and I have experience with C#, Javascript, SQL, HTML and CSS.
-                    </p>
-                  </div>
-                </div>
-              </div>
+  <div class="container-fluid" id="wrapper" data-spy="scroll" data-target=".navbar" data-offset="50">
+    <div class="row">
+      <div class="col">
+        <sections>
+          <div class="sections-dummy" id="dummy-top"></div>
 
-            </div>
-            <div class="col-md-3 text-center profile-picture-col">
-              <img id="profile-picture" src="http://res.cloudinary.com/krashner/image/upload/c_crop,g_face,h_400,w_400/v1499052083/me_esclau.jpg" alt="picture of me">
+          <!-- About Section -->
+          <div class="row  section-title" id="about">
+            <hr class="section-title-hr" />
+            <div class="col-md-5 col-sm-12 col-xs-12 text-center">
+              <h1 class=section-title-text>About</h1>
             </div>
           </div>
-          <div class="row link-buttons">
-            <div class="text-center">
-              <a href="https://github.com/krashner" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-github" aria-hidden="true"></i> GitHub</button></a>
-              <a href="https://www.linkedin.com/in/justinbuttrey" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-linkedin" aria-hidden="true"></i> LinkedIn</button></a>
-              <a href="https://www.freecodecamp.com/krashner" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-free-code-camp " aria-hidden="true"></i> FreeCodeCamp</button></a>
-            </div>
-          </div>
-        </div>
 
-        <!-- Projects Section -->
-        <div class="row text-center section-title" id="projects">
-          <hr class="section-title-hr" />
-          <div class="col-md-5 col-sm-12 col-xs-12">
-            <h1 class="section-title-text">Projects</h1>
-          </div>
-        </div>
-
-        <div class="section">
-          <div class="container-fluid">
+          <div class="section" id="about-content">
             <div class="row">
-              <div class="col-md-4 port">
-                <div class="thumbnail">
-                  <div class="portfolio-img-bg">
-                    <a href="https://github.com/Krashner/Projects" target="_blank"><img class="portfolio-img" src="http://res.cloudinary.com/krashner/image/upload/c_scale,h_480,w_640/v1498806854/githubimg.png" alt="GitHub link"></a>
+              <div class="col-md-9">
+                <div class="about-text">
+                  <div class="row">
+                    <div class="col text-left">
+                      <h1>Justin Buttrey</h1>
+                      <p>Front end developer, part-time student and hobby game designer. I'm currently working through the FreeCodeCamp courses and I have experience with C#, Javascript, SQL, HTML and CSS.
+                      </p>
+                    </div>
                   </div>
-                  <p class="caption">GitHub Mega Project</p>
                 </div>
-              </div>
-              <div class="col-md-4 port">
-                <div class="thumbnail">
-                  <div class="portfolio-img-bg">
-                    <a href="http://www.oddrealms.com/" target="_blank"><img class="portfolio-img" src="http://res.cloudinary.com/krashner/image/upload/v1498810099/wt595606bb88690-thumb_large_j3i24c.jpg" alt="OddRealms link"></a>
-                  </div>
-                  <p class="caption">Open world game project</p>
-                </div>
-              </div>
-              <div class="col-md-4 port">
-                <div class="thumbnail">
-                  <div class="portfolio-img-bg">
-                    <a href="http://jimbuttreyperformance.com/" target="_blank"><img class="portfolio-img" src="http://res.cloudinary.com/krashner/image/upload/v1498810177/wt595607272b5bf-thumb_large_qehmkg.jpg" alt="Jim Buttrey Performace link"></a>
-                  </div>
-                  <p class="caption">Performace Engines Business Site</p>
-                </div>
-              </div>
 
+              </div>
+              <div class="col-md-3 text-center profile-picture-col">
+                <img id="profile-picture" src="http://res.cloudinary.com/krashner/image/upload/c_crop,g_face,h_400,w_400/v1499052083/me_esclau.jpg" alt="picture of me">
+              </div>
             </div>
-          </div>
-        </div>
-
-        <!-- Contact Section -->
-        <div class="row text-center section-title" id="contact">
-          <hr class="section-title-hr" />
-          <div class="col-md-5 col-sm-12 col-xs-12">
-            <h1 class="section-title-text">Contact</h1>
-          </div>
-        </div>
-
-        <div class="section" id="contact-content">
-
-          <div class="row" id="contact-content-row">
-            <div class="col text-center">
-              Email: jbuttrey@oddrealms.com
-            </div>
-
-            <div class="col text-center">
-              <a href="https://github.com/krashner" target="_blank"><button class="btn btn-primary  vertical-btn"><i class="fa fa-github" aria-hidden="true"></i> GitHub</button></a>
-              <a href="https://www.linkedin.com/in/justinbuttrey" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-linkedin" aria-hidden="true"></i> LinkedIn</button></a>
-              <a href="https://www.freecodecamp.com/krashner" target="_blank"><button class="btn btn-primary  vertical-btn"><i class="fa fa-free-code-camp " aria-hidden="true"></i> FreeCodeCamp</button></a>
+            <div class="row link-buttons">
+              <div class="text-center">
+                <a href="https://github.com/krashner" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-github" aria-hidden="true"></i> GitHub</button></a>
+                <a href="https://www.linkedin.com/in/justinbuttrey" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-linkedin" aria-hidden="true"></i> LinkedIn</button></a>
+                <a href="https://www.freecodecamp.com/krashner" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-free-code-camp " aria-hidden="true"></i> FreeCodeCamp</button></a>
+              </div>
             </div>
           </div>
 
-        </div>
+          <!-- Projects Section -->
+          <div class="row text-center section-title" id="projects">
+            <hr class="section-title-hr" />
+            <div class="col-md-5 col-sm-12 col-xs-12">
+              <h1 class="section-title-text">Projects</h1>
+            </div>
+          </div>
 
-        <div class="sections-dummy" id="dummy-bottom"></div>
-      </sections>
+          <div class="section">
+            <div class="container-fluid">
+              <!-- First Row -->
+              <div class="row">
+                <div class="col">
+                  <div class="thumbnail">
+                    <div class="portfolio-img-bg">
+                      <a href="https://github.com/Krashner/Projects" target="_blank"><img class="portfolio-img" src="images/thumbnail-gh.jpg" alt="GitHub link"></a>
+                    </div>
+                    <p class="figure-caption">GitHub Mega Project</p>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="thumbnail">
+                    <div class="portfolio-img-bg">
+                      <a href="http://www.oddrealms.com/" target="_blank"><img class="portfolio-img" src="images/thumbnail-or.jpg" alt="OddRealms link"></a>
+                    </div>
+                    <p class="figure-caption">Open world game project</p>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="thumbnail">
+                    <div class="portfolio-img-bg">
+                      <a href="http://jimbuttreyperformance.com/" target="_blank"><img class="portfolio-img" src="images/thumbnail-jb.jpg" alt="Jim Buttrey Performace link"></a>
+                    </div>
+                    <p class="figure-caption">Performace Engines Business Site</p>
+                  </div>
+                </div>
+              </div>
+              <!-- Second Row -->
+              <div class="row">
+                <div class="col">
+                  <div class="thumbnail">
+                    <div class="portfolio-img-bg">
+                      <a href="projects/twitch/index.html" target="_blank"><img class="portfolio-img" src="images/thumbnail-twitch.jpg" alt="Twitch API link"></a>
+                    </div>
+                    <p class="figure-caption">Twitch API</p>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="thumbnail">
+                    <div class="portfolio-img-bg">
+                      <a href="projects/wiki/index.html" target="_blank"><img class="portfolio-img" src="images/thumbnail-wiki.jpg" alt="Wiki Viewer link"></a>
+                    </div>
+                    <p class="figure-caption">Wiki Viewer</p>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="thumbnail">
+                    <div class="portfolio-img-bg">
+                      <a href="projects/weather/index.html" target="_blank"><img class="portfolio-img" src="images/thumbnail-weather.jpg" alt="Weather App link"></a>
+                    </div>
+                    <p class="figure-caption">Weather App</p>
+                  </div>
+                </div>
+              </div>
+              <!-- Third Row -->
+              <div class="row">
+                <div class="col">
+                  <div class="thumbnail">
+                    <div class="portfolio-img-bg">
+                      <a href="projects/quote/index.html" target="_blank"><img class="portfolio-img" src="images/thumbnail-quote.jpg" alt="Random Quote Generator link"></a>
+                    </div>
+                    <p class="figure-caption">Random Quote Generator</p>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="thumbnail">
+                    <div class="portfolio-img-bg">
+                      <a href="projects/fps/index.html" target="_blank"><img class="portfolio-img" src="images/thumbnail-fps.jpg" alt="FPS link"></a>
+                    </div>
+                    <p class="figure-caption">FPS</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Contact Section -->
+          <div class="row text-center section-title" id="contact">
+            <hr class="section-title-hr" />
+            <div class="col-md-5 col-sm-12 col-xs-12">
+              <h1 class="section-title-text">Contact</h1>
+            </div>
+          </div>
+
+          <div class="section" id="contact-content">
+
+            <div class="row" id="contact-content-row">
+              <div class="col text-center">
+                Email: jbuttrey@oddrealms.com
+              </div>
+
+              <div class="col text-center">
+                <a href="https://github.com/krashner" target="_blank"><button class="btn btn-primary  vertical-btn"><i class="fa fa-github" aria-hidden="true"></i> GitHub</button></a>
+                <a href="https://www.linkedin.com/in/justinbuttrey" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-linkedin" aria-hidden="true"></i> LinkedIn</button></a>
+                <a href="https://www.freecodecamp.com/krashner" target="_blank"><button class="btn btn-primary  vertical-btn"><i class="fa fa-free-code-camp " aria-hidden="true"></i> FreeCodeCamp</button></a>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="sections-dummy" id="dummy-bottom"></div>
+        </sections>
+      </div>
     </div>
   </div>
-</div>
-  </body>
-</html>  
+</body>
+
+</html>
