--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
               </div>
               <div class="col-md-3 text-center profile-picture-col">
-                <img id="profile-picture" src="http://res.cloudinary.com/krashner/image/upload/c_crop,g_face,h_400,w_400/v1499052083/me_esclau.jpg" alt="picture of me">
+                <img id="profile-picture" src="images/profile_pic" alt="picture of me">
               </div>
             </div>
             <div class="row link-buttons">
