--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="col">
                   <div class="thumbnail">
                     <div class="portfolio-img-bg">
-                      <a href="projects/twitch/index.html" target="_blank"><img class="portfolio-img" src="images/thumbnail-twitch.jpg" alt="Twitch API link"></a>
+                      <a href="projects/twitch" target="_blank"><img class="portfolio-img" src="images/thumbnail-twitch.jpg" alt="Twitch API link"></a>
                     </div>
                     <p class="figure-caption">Twitch API</p>
                   </div>
@@ -113,7 +113,7 @@
                 <div class="col">
                   <div class="thumbnail">
                     <div class="portfolio-img-bg">
-                      <a href="projects/wiki/index.html" target="_blank"><img class="portfolio-img" src="images/thumbnail-wiki.jpg" alt="Wiki Viewer link"></a>
+                      <a href="projects/wiki" target="_blank"><img class="portfolio-img" src="images/thumbnail-wiki.jpg" alt="Wiki Viewer link"></a>
                     </div>
                     <p class="figure-caption">Wiki Viewer</p>
                   </div>
@@ -121,7 +121,7 @@
                 <div class="col">
                   <div class="thumbnail">
                     <div class="portfolio-img-bg">
-                      <a href="projects/weather/index.html" target="_blank"><img class="portfolio-img" src="images/thumbnail-weather.jpg" alt="Weather App link"></a>
+                      <a href="projects/weather" target="_blank"><img class="portfolio-img" src="images/thumbnail-weather.jpg" alt="Weather App link"></a>
                     </div>
                     <p class="figure-caption">Weather App</p>
                   </div>
@@ -132,7 +132,7 @@
                 <div class="col">
                   <div class="thumbnail">
                     <div class="portfolio-img-bg">
-                      <a href="projects/quote/index.html" target="_blank"><img class="portfolio-img" src="images/thumbnail-quote.jpg" alt="Random Quote Generator link"></a>
+                      <a href="projects/quote" target="_blank"><img class="portfolio-img" src="images/thumbnail-quote.jpg" alt="Random Quote Generator link"></a>
                     </div>
                     <p class="figure-caption">Random Quote Generator</p>
                   </div>
@@ -140,7 +140,7 @@
                 <div class="col">
                   <div class="thumbnail">
                     <div class="portfolio-img-bg">
-                      <a href="projects/fps/index.html" target="_blank"><img class="portfolio-img" src="images/thumbnail-fps.jpg" alt="FPS link"></a>
+                      <a href="projects/fps" target="_blank"><img class="portfolio-img" src="images/thumbnail-fps.jpg" alt="FPS link"></a>
                     </div>
                     <p class="figure-caption">FPS</p>
                   </div>
