--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           <div class="sections-dummy" id="dummy-top"></div>
 
           <!-- About Section -->
-          <div class="row  section-title" id="about">
+          <div class="row text-center section-title" id="about">
             <hr class="section-title-hr" />
-            <div class="col-md-5 col-sm-12 col-xs-12 text-center">
+            <div class="col-md-5 col-sm-12 col-xs-12">
               <h1 class=section-title-text>About</h1>
             </div>
           </div>
