--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <!-- About Section -->
           <div class="row text-center section-title" id="about">
             <hr class="section-title-hr" />
-            <div class="col-md-5 col-sm-12 col-xs-12">
+            <div class="col-12 col-md-auto">
               <h1 class=section-title-text>About</h1>
             </div>
           </div>
@@ -66,7 +66,7 @@
           <!-- Projects Section -->
           <div class="row text-center section-title" id="projects">
             <hr class="section-title-hr" />
-            <div class="col-md-5 col-sm-12 col-xs-12">
+            <div class="col-12 col-md-auto">
               <h1 class="section-title-text">Projects</h1>
             </div>
           </div>
@@ -152,7 +152,7 @@
           <!-- Contact Section -->
           <div class="row text-center section-title" id="contact">
             <hr class="section-title-hr" />
-            <div class="col-md-5 col-sm-12 col-xs-12">
+            <div class="col-12 col-md-auto">
               <h1 class="section-title-text">Contact</h1>
             </div>
           </div>
