--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="container-fluid">
               <!-- First Row -->
               <div class="row">
-                <div class="col">
+                <div class="col thumb-container">
                   <div class="thumbnail">
                     <div class="portfolio-img-bg">
                       <a href="https://github.com/Krashner/Projects" target="_blank"><img class="portfolio-img" src="images/thumbnail-gh.jpg" alt="GitHub link"></a>
@@ -83,7 +83,7 @@
                     <p class="figure-caption">GitHub Mega Project</p>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col thumb-container">
                   <div class="thumbnail">
                     <div class="portfolio-img-bg">
                       <a href="http://www.oddrealms.com/" target="_blank"><img class="portfolio-img" src="images/thumbnail-or.jpg" alt="OddRealms link"></a>
@@ -91,7 +91,7 @@
                     <p class="figure-caption">Open world game project</p>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col thumb-container">
                   <div class="thumbnail">
                     <div class="portfolio-img-bg">
                       <a href="http://jimbuttreyperformance.com/" target="_blank"><img class="portfolio-img" src="images/thumbnail-jb.jpg" alt="Jim Buttrey Performace link"></a>
@@ -102,7 +102,7 @@
               </div>
               <!-- Second Row -->
               <div class="row">
-                <div class="col">
+                <div class="col thumb-container">
                   <div class="thumbnail">
                     <div class="portfolio-img-bg">
                       <a href="projects/twitch" target="_blank"><img class="portfolio-img" src="images/thumbnail-twitch.jpg" alt="Twitch API link"></a>
@@ -110,7 +110,7 @@
                     <p class="figure-caption">Twitch API</p>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col thumb-container">
                   <div class="thumbnail">
                     <div class="portfolio-img-bg">
                       <a href="projects/wiki" target="_blank"><img class="portfolio-img" src="images/thumbnail-wiki.jpg" alt="Wiki Viewer link"></a>
@@ -118,7 +118,7 @@
                     <p class="figure-caption">Wiki Viewer</p>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col thumb-container">
                   <div class="thumbnail">
                     <div class="portfolio-img-bg">
                       <a href="projects/weather" target="_blank"><img class="portfolio-img" src="images/thumbnail-weather.jpg" alt="Weather App link"></a>
@@ -129,7 +129,7 @@
               </div>
               <!-- Third Row -->
               <div class="row">
-                <div class="col">
+                <div class="col thumb-container">
                   <div class="thumbnail">
                     <div class="portfolio-img-bg">
                       <a href="projects/quote" target="_blank"><img class="portfolio-img" src="images/thumbnail-quote.jpg" alt="Random Quote Generator link"></a>
@@ -137,7 +137,7 @@
                     <p class="figure-caption">Random Quote Generator</p>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col thumb-container">
                   <div class="thumbnail">
                     <div class="portfolio-img-bg">
                       <a href="projects/fps" target="_blank"><img class="portfolio-img" src="images/thumbnail-fps.jpg" alt="FPS link"></a>
