--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <p class="figure-caption">Twitch API</p>
                   </div>
                 </div>
-                <div class="col thumb-container">
+                <div class="col thumb">
                   <div class="thumbnail">
                     <div class="portfolio-img-bg">
                       <a href="projects/wiki" target="_blank"><img class="portfolio-img" src="images/thumbnail-wiki.jpg" alt="Wiki Viewer link"></a>
