--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
               <div class="text-center">
                 <a href="https://github.com/krashner" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-github" aria-hidden="true"></i> GitHub</button></a>
                 <a href="https://www.linkedin.com/in/justinbuttrey" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-linkedin" aria-hidden="true"></i> LinkedIn</button></a>
-                <a href="https://www.freecodecamp.com/krashner" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-free-code-camp " aria-hidden="true"></i> FreeCodeCamp</button></a>
-              </div>
+                <a href="https://www.freecodecamp.com/krashner" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-free-code-camp" aria-hidden="true"></i> FreeCodeCamp</button></a>
+                <a href="https://www.krashner.github.io/files/Justin_Buttrey_Resume.pdf" target="_blank"><button class="btn btn-primary vertical-btn"><i class="far fa-file-alt" aria-hidden="true"></i> Resume</button></a>
+               </div>
             </div>
           </div>
 
