--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <a href="https://github.com/krashner" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-github" aria-hidden="true"></i> GitHub</button></a>
                 <a href="https://www.linkedin.com/in/justinbuttrey" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-linkedin" aria-hidden="true"></i> LinkedIn</button></a>
                 <a href="https://www.freecodecamp.com/krashner" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-free-code-camp" aria-hidden="true"></i> FreeCodeCamp</button></a>
-                <a href="https://github.com/Krashner/krashner.github.io/blob/master/files/Justin_Buttrey_Resume.pdf" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-file-alt" aria-hidden="true"></i> Resume</button></a>
+                <a href="krashner.github.io/files/Justin_Buttrey_Resume.pdf" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-file-alt" aria-hidden="true"></i> Resume</button></a>
                </div>
             </div>
           </div>
