--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Justin">
   <title>My Portfolio!</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -59,7 +59,7 @@
                 <a href="https://github.com/krashner" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-github" aria-hidden="true"></i> GitHub</button></a>
                 <a href="https://www.linkedin.com/in/justinbuttrey" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-linkedin" aria-hidden="true"></i> LinkedIn</button></a>
                 <a href="https://www.freecodecamp.com/krashner" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-free-code-camp" aria-hidden="true"></i> FreeCodeCamp</button></a>
-                <a href="krashner.github.io/files/Justin_Buttrey_Resume.pdf" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-file-alt" aria-hidden="true"></i> Resume</button></a>
+                <a href="krashner.github.io/files/Justin_Buttrey_Resume.pdf" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fas fa-file-alt" aria-hidden="true"></i> Resume</button></a>
                </div>
             </div>
           </div>
