--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             </div>
             <div class="row link-buttons">
               <div class="text-center">
-                <a href="https://github.com/krashner" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-github" aria-hidden="true"></i> GitHub</button></a>
-                <a href="https://www.linkedin.com/in/justinbuttrey" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-linkedin" aria-hidden="true"></i> LinkedIn</button></a>
-                <a href="https://www.freecodecamp.com/krashner" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-free-code-camp" aria-hidden="true"></i> FreeCodeCamp</button></a>
+                <a href="https://github.com/krashner" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fab fa-github" aria-hidden="true"></i> GitHub</button></a>
+                <a href="https://www.linkedin.com/in/justinbuttrey" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fab fa-linkedin" aria-hidden="true"></i> LinkedIn</button></a>
+                <a href="https://www.freecodecamp.com/krashner" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fab fa-free-code-camp" aria-hidden="true"></i> FreeCodeCamp</button></a>
                 <a href="krashner.github.io/files/Justin_Buttrey_Resume.pdf" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fas fa-file-alt" aria-hidden="true"></i> Resume</button></a>
                </div>
             </div>
@@ -166,9 +166,9 @@
               </div>
 
               <div class="col text-center">
-                <a href="https://github.com/krashner" target="_blank"><button class="btn btn-primary  vertical-btn"><i class="fa fa-github" aria-hidden="true"></i> GitHub</button></a>
-                <a href="https://www.linkedin.com/in/justinbuttrey" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fa fa-linkedin" aria-hidden="true"></i> LinkedIn</button></a>
-                <a href="https://www.freecodecamp.com/krashner" target="_blank"><button class="btn btn-primary  vertical-btn"><i class="fa fa-free-code-camp " aria-hidden="true"></i> FreeCodeCamp</button></a>
+                <a href="https://github.com/krashner" target="_blank"><button class="btn btn-primary  vertical-btn"><i class="fab fa-github" aria-hidden="true"></i> GitHub</button></a>
+                <a href="https://www.linkedin.com/in/justinbuttrey" target="_blank"><button class="btn btn-primary vertical-btn"><i class="fab fa-linkedin" aria-hidden="true"></i> LinkedIn</button></a>
+                <a href="https://www.freecodecamp.com/krashner" target="_blank"><button class="btn btn-primary  vertical-btn"><i class="fab fa-free-code-camp " aria-hidden="true"></i> FreeCodeCamp</button></a>
               </div>
             </div>
 
