Small tweaks to index and style

--- a/index.html
+++ b/index.html
@@ -213,6 +213,8 @@
 		<div class="section" id="contact-content">
 			<div class="row" id="contact-content-row">
 				<div class="col text-center" id="form-container">
+					<p>If you like my work, or would just like to say hello, please feel free to email me with the form below.</p>
+					<hr>
 					<form action="https://formspree.io/jbuttrey@oddrealms.com" class="form" id="form" method="post" name="form">
 						<input class="form" id="form-name" name="name" placeholder="Name" type="text">
 						<hr>
